# cloudtalk

./: README.md
android/: local.properties
android/app/src/main/: AndroidManifest.xml
server/: CMakeLists.txt
server/cmake/: acl.cmake  curl.cmake  freetds.cmake  gflag-2.2.2.cmake  libevent.cmake  log4cplus.cmake  openssl.cmake  protobuf.cmake  spdlog.cmake  yaml-cpp.cmake
server/src/base/: CMakeLists.txt  HttpClient.cpp  ImPduBase.cpp  ImPduBase.h  Lock.h  public_define.h
